# BMCNNwHFCs

./: .gitignore  LICENSE  README.md
C++/: CMakeLists.txt  DeviceInfo.h  EnsembleData.h  EnsembleFind.sln  EnsembleFind.vcxproj  Misc.h  OutputData.h  OutputMarshaller.h  OutputRecord.h  Outputter.h  ProcessData.h  README.md  ThreadSafeQueue.h  kernels.cu  kernels.h  main.cpp  main.h  type_defs.h
data/: README.md  summary_info.xlsx
data/learnable_ones_init/: ensemble_data.txt  ensemble_info.xlsx
data/learnable_rand_init/: ensemble_data.txt  ensemble_info.xlsx
data/not_learnable/: ensemble_data.txt  ensemble_info.xlsx  logs8.txt  logs8.xlsx
python/: README.md  perturbations.py  reconstruct.py  run_experiments.py  train.py
python/constructs/: ema_weights.py  learning_rate.py  loggable.py  loops.py  loss.py  metrics.py  optimizer.py  output.py
python/etc/: README.md  count_vars.py  ensemble_evaluations.py  extract_final_branch_weights.py  extract_scalars_from_logs.py  extract_smallNORB_training_samples.py  plot_final_branch_weights.py  produce_MNIST_eval_digits.py  segregate_weight_types.py
python/input/: MNIST_input_pipeline.py  cifar100_input_pipeline.py  cifar10_input_pipeline.py  cifar_input_pipeline.py  input_pipeline_base.py  smallNORB_input_pipeline.py
python/models/: SmallImageBranchingMerging.py  nn_ops.py  variable.py
python/training/: README.md  batch_norm_cond_in_graph.py  ema_weights.py  export_pb.py  gpu_utils.py  input_pipeline.py  metrics.py  nn_ops.py  output.py  train.py  train_and_eval_loops.py
